# noogl

./: .gitignore  .npmignore  CMakeLists.txt  gen.js  index.js  package-lock.json  package.json
.github/workflows/: main.yml
lib/: GenerateCommand.js  GenerateEnum.js  GenerateSource.js  GenerateType.js  ParseOpenGl.js
source/: addon.cpp  addon.hpp  cptr.hpp
test/: index.js  package-lock.json  package.json
